Web Inspector: align the percentages in the audit tab https://bugs.webkit.org/show_bug.cgi?id=268207
Reviewed by Devin Rousso.

Updating text-align:center to text-align:end for the percentages in the audit tab.

Amend changes:
* Source/WebInspectorUI/UserInterface/Views/AuditTestGroupContentView.css:
(.content-view.audit-test-group > header > .percentage-pass):

Combined changes:
* Source/WebInspectorUI/UserInterface/Views/AuditTestGroupContentView.css:
(.content-view.audit-test-group > header > .percentage-pass):

Canonical link: https://commits.webkit.org/274078@main

--- a/Source/WebInspectorUI/UserInterface/Views/AuditTestGroupContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/AuditTestGroupContentView.css
@@ -131,7 +131,7 @@
     width: var(--metadata-width);
     margin-inline-start: var(--audit-test-horizontal-space);
     font-size: 16px;
-    text-align: center;
+    text-align: end;
     font-weight: bold;
     /* FIXME: Use CSS4 color blend functions once they're available. */
     color: hsla(0, 0%, 0%, 0.5);
